# langchain-knoledgebase-rag

./: .dockerignore  .env.example  .gitignore  Makefile  alembic.ini  app.py  cli.py  docker-compose.prod.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  seed.py  test_import.py
alembic/: env.py  script.py.mako
alembic/versions/: 44b52e61b180_initial_schema.py
apps/api/: main.py
docker/: Dockerfile  Dockerfile.worker  README.md
docker/nginx/: nginx.conf
docker/scripts/: migrate.sh  start-worker.sh  start.sh  wait-for-db.py
docs/: ARCHITECTURE_TUTORIAL.md  BUILD_STATUS.md  CHANGELOG.md  DEPLOYMENT.md  EXTENDING.md  QUICKSTART.md  TESTING_PLAYBOOK.md  TUTORIAL_LONG_TERM_MEMORY.md  UNUSED_FILES.md  mvpRAG.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[role]/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/chat/: history-rail.tsx  message-bubble.tsx
frontend/src/components/documents/: upload-dropzone.tsx
frontend/src/components/features/: agents-view.tsx  dashboard-view.tsx  document-detail-view.tsx  documents-view.tsx  feedback-view.tsx  knowledge-bases-view.tsx  model-profiles-view.tsx  prompts-view.tsx  search-view.tsx  tools-view.tsx  upload-jobs-view.tsx
frontend/src/components/layout/: app-shell.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/shared/: empty-state.tsx  page-header.tsx  status-badge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  (+5 more)
frontend/src/hooks/: use-api.ts  use-conversation-history.ts
frontend/src/lib/: session.tsx  utils.ts
tests/: test_llm.py
(+20 files in other folders)
