[project]
name = "langchain-knoledgebase-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.5",
    "anthropic>=0.117.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "dependency-injector>=4.49.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "groq>=0.37.1",
    "hiredis>=3.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "mypy>=2.3.0",
    "openai>=2.46.0",
    "orjson>=3.11.9",
    "pgvector>=0.4.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=5.3.1",
    "rich>=15.0.0",
    "ruff>=0.15.22",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
